# ARKHE

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  STREAMLIT_README.md  commit_message.txt  commit_message_concise.txt  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_streamlit.py  setup.py  test_streamlit_import.py
configs/: default.yaml
configs/training/: collatz_transformer.yaml
docs/: .gitignore  ENTERPRISE_READINESS_SUMMARY.md  README.md  conf.py  index.rst  make.bat
docs/api/: analysis.rst  index.rst  ml.rst  sequences.rst  utils.rst
docs/examples/: quick_start.py
docs/guides/: docker_setup.md  faq.md  getting_started.md  observability.md  production_deployment.md  release_management.md  security_best_practices.md  streamlit_setup.md  training_guide.md  usage_examples.md
scripts/: release.py  setup_environment.py
src/apps/cli/: __init__.py  __main__.py  main.py
src/apps/cli/commands/: __init__.py  analyze.py  evaluate.py  generate.py  train.py
src/apps/streamlit_demo/: __init__.py  app.py  run.py
src/math_research/: __init__.py
src/math_research/analysis/: __init__.py  patterns.py  statistics.py  visualization.py
src/math_research/ml/: __init__.py
src/math_research/ml/encoding/: __init__.py  base_encoding.py  multi_base.py
src/math_research/ml/evaluation/: __init__.py  error_analysis.py  metrics.py
src/math_research/ml/models/: __init__.py  base_model.py  collatz_transformer.py
src/math_research/ml/training/: __init__.py  data_loader.py  experiment_tracker.py  trainer.py
src/math_research/sequences/: __init__.py  base.py  collatz.py  registry.py
src/math_research/utils/: __init__.py  config.py  health.py  logging.py  metrics.py  observability.py  tracing.py  validators.py
src/notebooks/: 01_collatz_basics.ipynb  02_sequence_analysis.ipynb  03_transformer_training.ipynb  04_attention_specialization_breakdown.ipynb
tests/: __init__.py
tests/integration/: __init__.py  test_training_pipeline.py
tests/performance/: __init__.py
tests/unit/: __init__.py  test_analysis.py  test_ml_encoding.py  test_ml_evaluation.py  test_ml_models.py  test_ml_training.py  test_sequences.py
